--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,49 +1,3 @@
-@import "tailwindcss";
 /* main.css */
-
-/* 按鈕共用 */
-.swal-btn {
-  width: 120px;
-  height: 50px;
-  border-radius: 30px;
-  margin: 0 15px;
-}
-
-/* 正向按鈕 */
-.btn-success {
-  background: #165DFF;
-  color: #fff;
-}
-
-/* 負向按鈕 */
-.btn-danger {
-  background: #dc2626;
-  color: #fff;
-}
-
-/* 按鈕外框 */
-.swal-popup {
-  padding: 15px 30px;
-  border-radius: 30px;
-  box-shadow: 0 0 12px rgba(0, 0, 0, 0.3);
-  height: 380px;
-}
-
-/* 負向icon */
-.swal-error-icon {
-  border-color: #ff0000 !important;
-}
-
-.swal-error-icon .swal2-x-mark-line-left,
-.swal-error-icon .swal2-x-mark-line-right {
-  background-color: #ff0000 !important;
-}
-
-/* 警告icon */
-.swal-warning-icon {
-  border-color: #ff7700 !important;
-}
-
-.swal2-icon-content {
-  color: #ff7700 !important;
-}
+@import "tailwindcss";
+@import "./swal.css";
